feat: cimplete setup for the bridge api with REST API and the cre
